--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"X:\\Joel\\Documents\\GitHub\\OS-A1\\OS-A1","type":"PROJECT","hints":{"PROJECT_NAME":"OS-A1"}},"ABSENT"],[{"location":"C:\\Program Files\\Java\\jre1.8.0_161","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_161","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"X:\\Joel\\Documents\\GitHub\\OS-A1\\OS-A1","type":"PROJECT","hints":{"PROJECT_NAME":"OS-A1"}},"ABSENT"]]
